# oberon0-runtime-py

./: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: build.yml  docker.yml  docs.yml  test.yml
docs/: api.rst  cli.rst  conf.py  index.rst
examples/: add.wat  print_odd_numbers.wat  say42.wat  stack.wat
oberon0_runtime/: __init__.py
src/oberon0_runtime/: __init__.py
tests/: basic_test.py  cli_test.py
